you can play 5 rounds now

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="scrips.js"></script>
+    <script src="scrips.js" defer></script>
 </head>
 <body>
     <h1>rock paper scissors</h1>
+    <p>Only available for the console</p>
 </body>
 </html>
