--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>rock paper scissors</h1>
-    <p>Only available for the console</p>
+    <p>Only available for the console (for now)</p>
+    <p>Before you start, open your console (not possible while playing, because of the alert (while prompting))</p>
+    <button onclick="game()">Start</button>
 </body>
 </html>
