--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <h1>rock paper scissors</h1>
     <p>Only available for the console (for now)</p>
-    <p>BEFORE you start, open your console (not possible while playing, because of the alert (while prompting))</p>
+    <p>BEFORE you start, open your console (not possible while playing, because of the prompt</p>
     <p>ATTENTION!!! This game is passive aggressive. Or active. Whatever</p>
+    <p>Don't you even try to cancel the prompt</p>
     <button onclick="game()">Start</button>
 </body>
 </html>
