setting up a ui for the game. startig by commenting out the existing script and set up buttons and an event lsitener to those buttons (click)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>rock paper scissors</h1>
@@ -12,5 +13,9 @@
     <p>BEFORE you start, open your console (not possible while playing, because of the prompt)</p>
     <p>Don't you even try to cancel the prompt</p>
     <button onclick="game()">Start</button>
+    <button class="click" id="one">Rock</button>
+    <button class="click" id="two">Paper</button>
+    <button class="click" id="three">Scissor</button>
+
 </body>
 </html>
