secure thoughts about structure and functions

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <p>BEFORE you start, open your console (not possible while playing, because of the prompt)</p>
     <p>Don't you even try to cancel the prompt</p>
     <button onclick="game()">Start</button>
-    <button class="click" id="one">Rock</button>
-    <button class="click" id="two">Paper</button>
-    <button class="click" id="three">Scissor</button>
+    <button>Rock</button>
+    <button>Paper</button>
+    <button>Scissor</button>
 
 </body>
 </html>
