setting up tetx, structure and logic for the last round

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>rock paper scissors</h1>
     <p>Only available for the console (for now)</p>
     <p>BEFORE you start, open your console (not possible while playing, because of the prompt)</p>
-    <p>Don't you even try to cancel the prompt</p>
 
+    <button>Reset</button>
     <button>Rock</button>
     <button>Paper</button>
     <button>Scissor</button>
