inject text from js to the html. set up logic for several games. easter egg. push to main.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 </head>
 <body>
     <h1>rock paper scissors</h1>
-    <p>Only available for the console (for now)</p>
-    <p>BEFORE you start, open your console (not possible while playing, because of the prompt)</p>
+    <p>Look up in console for battle report (i don't expect you to have the memory of Napoleon)</p>
+    <p>You can start by choosing your first attack</p>
 
     <button>Reset</button>
     <button>Rock</button>
     <button>Paper</button>
     <button>Scissor</button>
+
+
+    <div id="game-output"></div>
 
 </body>
 </html>
